--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div id="unitInput">
         <h1 id="title">Unit Converter</h1>
         <form>
-            <input id="input-el" type="number">
-            <buutton id="convert-btn" onclick="convert()">Convert</buutton>
+            <input id="input-el" type="number" value="10">
+            <buutton id="convert-btn" onclick="convertUnit()">Convert</buutton>
         </form>
     </div>
     <div id="answers">
@@ -25,7 +25,7 @@
 
         <div class="output">
             <h2>Volume (Liters/Gallons)</h2>
-            <p id="volume.el"></p>
+            <p id="volume-el"></p>
         </div>
         
         <div class="output">
@@ -36,3 +36,4 @@
     <script src="index.js"></script>
 </body>
 </html>
+
