--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 id="title">Unit Converter</h1>
         <form>
             <input id="input-el" type="number" value="10">
-            <buutton id="convert-btn" onclick="convertUnit()">Convert</buutton>
+            <button type="button" id="convert-btn" onclick="convertUnit()">Convert</button>
         </form>
     </div>
     <div id="answers">
