--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="unitInput">
         <h1 id="title">Unit Converter</h1>
         <form>
-            <input id="input-el" type="number" value="10" min=0>
+            <input id="input-el" type="number" value="10" min="0">
             <button type="button" id="convert-btn" onclick="convert()">Convert</button>
         </form>
     </div>
